--- a/index.html
+++ b/index.html
@@ -1,272 +1,91 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<section id="hpa" class="section">
+  <h2 class="title">O que é o eixo HPA — e por que ele muda tudo</h2>
 
-<title>HPA RESET® | Quando o eixo trava, o corpo cobra</title>
-<meta name="description" content="Descubra se seu eixo do estresse (HPA) está em desequilíbrio. Teste científico + indicação do plano ideal.">
-<meta name="robots" content="index, follow">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-
-<style>
-:root{
-  --bg:#f5f7fb;
-  --card:#ffffff;
-  --text:#0b1220;
-  --muted:#4b5563;
-  --accent:#0f172a;
-  --line:#e5e7eb;
-  --ok:#16a34a;
-  --warn:#f59e0b;
-  --high:#ef4444;
-  --radius:26px;
-  --radius-lg:40px;
-  --shadow:0 26px 60px rgba(15,23,42,.12);
-  --max:980px;
-}
-*{box-sizing:border-box;margin:0;padding:0}
-html{scroll-behavior:smooth}
-body{
-  font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
-  background:radial-gradient(900px 420px at 50% -140px, rgba(99,102,241,.18), transparent 60%), var(--bg);
-  color:var(--text);
-  line-height:1.75;
-}
-.wrap{max-width:var(--max);margin:auto;padding:28px 16px 120px}
-a{text-decoration:none;color:inherit}
-
-/* ===== STRUCTURE ===== */
-section{
-  margin-top:24px;
-  background:var(--card);
-  border:1px solid rgba(148,163,184,.22);
-  border-radius:var(--radius);
-  padding:32px 26px;
-  box-shadow:var(--shadow);
-  animation:fadeUp .9s ease;
-}
-h1,h2{
-  letter-spacing:-.04em;
-}
-h1{font-size:2.6rem;margin-bottom:16px}
-h2{font-size:1.9rem;margin-bottom:14px}
-p{color:var(--muted);margin-bottom:14px}
-strong{color:#0f172a}
-
-/* ===== HERO ===== */
-.hero{
-  background:linear-gradient(135deg,#fff,#f9fafb,#eef2ff);
-  border-radius:var(--radius-lg);
-}
-.pill{
-  display:inline-block;
-  padding:6px 18px;
-  border-radius:999px;
-  background:rgba(37,99,235,.12);
-  font-size:.75rem;
-  letter-spacing:.18em;
-  text-transform:uppercase;
-  margin-bottom:18px;
-}
-
-/* ===== METAPHORS ===== */
-.metaphor{
-  background:#f9fafb;
-  border-left:4px solid #6366f1;
-  padding:16px 18px;
-  border-radius:14px;
-  margin:16px 0;
-  font-style:italic;
-  color:#374151;
-}
-
-/* ===== TEST ===== */
-.q{
-  border:1px solid var(--line);
-  border-radius:18px;
-  padding:18px;
-  margin-bottom:14px;
-}
-.q strong{display:block;margin-bottom:10px}
-.opt{
-  display:block;
-  margin-bottom:8px;
-  cursor:pointer;
-}
-.result{
-  display:none;
-  margin-top:18px;
-  padding:22px;
-  border-radius:20px;
-  background:#f9fafb;
-  border:1px solid var(--line);
-}
-.btn{
-  display:inline-block;
-  padding:16px 28px;
-  border-radius:999px;
-  font-weight:800;
-  background:var(--accent);
-  color:#fff;
-  box-shadow:0 22px 55px rgba(15,23,42,.38);
-  margin-top:14px;
-}
-.btn.secondary{
-  background:#fff;
-  color:#111827;
-  border:1px solid var(--line);
-  box-shadow:0 14px 34px rgba(15,23,42,.12);
-}
-
-/* ===== FOOTER ===== */
-footer{
-  margin-top:30px;
-  text-align:center;
-  font-size:.85rem;
-  color:#6b7280;
-}
-
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(30px)}
-  to{opacity:1;transform:translateY(0)}
-}
-</style>
-</head>
-
-<body>
-
-<script>
-const WHATSAPP="https://wa.me/5598981653105";
-</script>
-
-<div class="wrap">
-
-<!-- HERO -->
-<section class="hero">
-  <div class="pill">Teste Integrativo · Eixo HPA</div>
-  <h1>Quando o eixo do estresse perde o controle,<br>o corpo começa a cobrar.</h1>
-
-  <p>
-    O eixo HPA (Hipotálamo–Hipófise–Adrenal) é o <strong>sistema central de sobrevivência</strong>.
-    Ele decide quando você precisa reagir, se defender, acelerar ou descansar.
+  <p class="text">
+    O eixo <strong>HPA</strong> (Hipotálamo–Hipófise–Adrenal) é o “circuito de sobrevivência” do corpo.
+    Ele decide quando você precisa acelerar, se defender, vigiar, reagir… e quando você pode desligar e recuperar.
   </p>
 
-  <div class="metaphor">
-    Pense no eixo HPA como o <strong>termostato do estresse</strong>.  
-    Quando funciona bem, ele sobe e desce conforme a necessidade.  
-    Quando trava, fica sempre alto — mesmo quando não há perigo.
+  <div class="callout">
+    <strong>Metáfora científica:</strong> imagine um <strong>alarme inteligente</strong>.
+    Em dias normais ele toca e para.  
+    No desequilíbrio do HPA, ele toca por “ameaças invisíveis”: cobrança interna, estresse prolongado, noites ruins,
+    ansiedade antecipatória — e não volta ao silencioso.
   </div>
 
-  <p>
-    Nenhum corpo aguenta viver em alerta contínuo sem pagar um preço.
+  <p class="text">
+    Quando isso acontece, o corpo até “funciona”, mas paga em outra moeda:
+    sono leve, mente acelerada, irritabilidade, queda de energia, fome/compulsão, tensão muscular.
   </p>
+
+  <div class="callout">
+    <strong>Metáfora do termostato:</strong> o HPA deveria subir e descer como um termostato.
+    Se ele trava alto, você vive em “modo alerta” mesmo sem perigo real.
+  </div>
+
+  <h3 class="subtitle">Teste rápido (7 perguntas) — foco em sinais de desequilíbrio do HPA</h3>
+  <p class="text subtle">
+    Responda como você está na <strong>maioria dos dias</strong>. Não responda como você gostaria de estar.
+    Isso não é diagnóstico médico — é um filtro prático para indicar o nível de acompanhamento.
+  </p>
+
+  <div class="quiz">
+    <div class="q">
+      <div class="qtitle">1) Ao acordar, você já se sente “cansada antes do dia começar”?</div>
+      <label><input type="radio" name="hpa1" value="0"> Raramente</label>
+      <label><input type="radio" name="hpa1" value="1"> Com frequência</label>
+      <label><input type="radio" name="hpa1" value="2"> Quase todos os dias</label>
+    </div>
+
+    <div class="q">
+      <div class="qtitle">2) Sua mente demora a desligar, mesmo quando o corpo pede descanso?</div>
+      <label><input type="radio" name="hpa2" value="0"> Não</label>
+      <label><input type="radio" name="hpa2" value="1"> Às vezes</label>
+      <label><input type="radio" name="hpa2" value="2"> Quase sempre</label>
+    </div>
+
+    <div class="q">
+      <div class="qtitle">3) Você tem “picos” de alerta (taquicardia, aperto no peito, tensão) sem motivo claro?</div>
+      <label><input type="radio" name="hpa3" value="0"> Raramente</label>
+      <label><input type="radio" name="hpa3" value="1"> Às vezes</label>
+      <label><input type="radio" name="hpa3" value="2"> Com frequência</label>
+    </div>
+
+    <div class="q">
+      <div class="qtitle">4) Seu sono é leve ou fragmentado (acorda no meio da noite / não aprofunda)?</div>
+      <label><input type="radio" name="hpa4" value="0"> Não</label>
+      <label><input type="radio" name="hpa4" value="1"> Às vezes</label>
+      <label><input type="radio" name="hpa4" value="2"> Quase sempre</label>
+    </div>
+
+    <div class="q">
+      <div class="qtitle">5) Pequenas coisas geram reações grandes (irritação, choro, impaciência) e depois vem culpa?</div>
+      <label><input type="radio" name="hpa5" value="0"> Não</label>
+      <label><input type="radio" name="hpa5" value="1"> Às vezes</label>
+      <label><input type="radio" name="hpa5" value="2"> Com frequência</label>
+    </div>
+
+    <div class="q">
+      <div class="qtitle">6) Você sente que está sempre “segurando as pontas” e que se parar, desaba?</div>
+      <label><input type="radio" name="hpa6" value="0"> Não</label>
+      <label><input type="radio" name="hpa6" value="1"> Sim</label>
+      <label><input type="radio" name="hpa6" value="2"> Sim, no limite</label>
+    </div>
+
+    <div class="q">
+      <div class="qtitle">7) Quando você tenta seguir uma rotina, você começa e depois perde força (como se o corpo “desligasse”)?</div>
+      <label><input type="radio" name="hpa7" value="0"> Raramente</label>
+      <label><input type="radio" name="hpa7" value="1"> Às vezes</label>
+      <label><input type="radio" name="hpa7" value="2"> Com frequência</label>
+    </div>
+
+    <button class="btn" type="button" onclick="calcHPA()">Ver meu resultado</button>
+
+    <div id="hpaResult" class="resultBox" style="display:none;"></div>
+
+    <p class="text subtle" style="margin-top:10px;">
+      Se você está em crise intensa, ideação suicida, ou sintomas graves, procure atendimento médico imediato.
+      Este teste não substitui avaliação clínica individual.
+    </p>
+  </div>
 </section>
-
-<!-- MECANISMO -->
-<section>
-<h2>O mecanismo do eixo HPA (em linguagem humana)</h2>
-
-<p>
-O <strong>hipotálamo</strong> percebe ameaça.  
-A <strong>hipófise</strong> confirma o sinal.  
-As <strong>adrenais</strong> liberam cortisol e adrenalina.
-</p>
-
-<div class="metaphor">
-É como um <strong>alarme inteligente</strong>.  
-O problema começa quando ele dispara por cansaço, cobrança interna, ansiedade ou estresse prolongado —  
-e nunca mais volta ao modo silencioso.
-</div>
-
-<p>
-Com o tempo, o corpo se adapta ao estado de alerta como se fosse o normal.
-A pessoa “funciona”, mas não se recupera.
-</p>
-</section>
-
-<!-- TEST -->
-<section id="teste">
-<h2>Teste de desequilíbrio do eixo HPA</h2>
-<p>
-Responda com honestidade.  
-Não responda como você gostaria de estar — responda como está <strong>na maioria dos dias</strong>.
-</p>
-
-<div class="q">
-<strong>1) Ao acordar, seu corpo parece já cansado antes do dia começar?</strong>
-<label class="opt"><input type="radio" name="q1" value="0"> Raramente</label>
-<label class="opt"><input type="radio" name="q1" value="1"> Com frequência</label>
-<label class="opt"><input type="radio" name="q1" value="2"> Quase todos os dias</label>
-</div>
-
-<div class="q">
-<strong>2) Sua mente demora a desligar mesmo quando o corpo pede descanso?</strong>
-<label class="opt"><input type="radio" name="q2" value="0"> Não</label>
-<label class="opt"><input type="radio" name="q2" value="1"> Às vezes</label>
-<label class="opt"><input type="radio" name="q2" value="2"> Quase sempre</label>
-</div>
-
-<div class="q">
-<strong>3) Pequenas coisas geram reações emocionais desproporcionais?</strong>
-<label class="opt"><input type="radio" name="q3" value="0"> Não</label>
-<label class="opt"><input type="radio" name="q3" value="1"> Às vezes</label>
-<label class="opt"><input type="radio" name="q3" value="2"> Com frequência</label>
-</div>
-
-<div class="q">
-<strong>4) Seu sono não parece restaurar, mesmo dormindo várias horas?</strong>
-<label class="opt"><input type="radio" name="q4" value="0"> Não</label>
-<label class="opt"><input type="radio" name="q4" value="1"> Às vezes</label>
-<label class="opt"><input type="radio" name="q4" value="2"> Quase sempre</label>
-</div>
-
-<div class="q">
-<strong>5) Você sente que está sempre “segurando as pontas”?</strong>
-<label class="opt"><input type="radio" name="q5" value="0"> Não</label>
-<label class="opt"><input type="radio" name="q5" value="1"> Sim</label>
-<label class="opt"><input type="radio" name="q5" value="2"> Sim, no limite</label>
-</div>
-
-<button class="btn" onclick="calc()">Ver resultado</button>
-
-<div class="result" id="res"></div>
-</section>
-
-<footer>
-HPA RESET® · Terapeuta Soares  
-<br>Este teste não substitui avaliação médica.
-</footer>
-
-</div>
-
-<script>
-function calc(){
-let score=0;
-for(let i=1;i<=5;i++){
-  let v=document.querySelector(`input[name="q${i}"]:checked`);
-  if(!v){alert("Responda todas as perguntas com sinceridade.");return;}
-  score+=parseInt(v.value);
-}
-let r=document.getElementById("res");
-r.style.display="block";
-
-if(score<=3){
-  r.innerHTML="<strong>Resultado:</strong> Seu eixo HPA mostra sinais leves de sobrecarga.<br><br><strong>Plano indicado:</strong> HPA RESET® Essencial.<br><br>Você ainda está funcional, mas precisa reorganizar o sistema antes que o desgaste avance.";
-}
-else if(score<=6){
-  r.innerHTML="<strong>Resultado:</strong> Seu eixo HPA está em desequilíbrio funcional.<br><br><strong>Plano indicado:</strong> HPA RESET® Acompanhado (3x/semana).<br><br>Correções frequentes aumentam a chance de recuperação real.";
-}
-else{
-  r.innerHTML="<strong>Resultado:</strong> Seu eixo HPA está em estado de alerta crônico.<br><br><strong>Plano indicado:</strong> HPA RESET® Intensivo (diário).<br><br>Seu corpo precisa de presença terapêutica contínua para sair do modo sobrevivência.";
-}
-
-r.innerHTML+=`<br><br><a class="btn secondary" href="${WHATSAPP}?text=Fiz o teste do eixo HPA e quero conversar sobre o plano indicado.">Falar com o terapeuta</a>`;
-}
-</script>
-
-</body>
-</html>
