--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     return el ? Number(el.value) : null;
   }
 
-  // ✅ Resultado emocional forte (mantendo ética: sem promessa de cura, sem atacar psiquiatria)
+  // ✅ Resultado emocional forte (sem prometer cura, sem atacar psiquiatria)
   function calc(){
     let score = 0;
     for(let i=1;i<=7;i++){
@@ -493,168 +493,197 @@
       score += v; // 0..14
     }
 
+    // Intensidade (linguagem humana)
+    const intensidadeTxt =
+      score <= 4 ? "um alerta leve, mas constante"
+      : score <= 9 ? "um alerta moderado, com oscilações"
+      : "um alerta alto, do tipo que rouba energia e paz";
+
+    // Plano + narrativa
     let plano = "";
-    let titulo = "";
-    let espelho = "";
-    let oQueAcontece = "";
-    let porQueNinguemPega = "";
-    let porQueEssePlano = "";
-    let convite = "";
+    let headline = "";
+    let carinho = "";
+    let corpo = "";
+    let invisivel = "";
+    let sentidoPlano = "";
+    let proximoPasso = "";
     let tomMsg = "";
 
-    const intensidade = score <= 4 ? "leve/moderada" : (score <= 9 ? "moderada/alta" : "alta");
-    const tempo = "3 semanas";
+    // “Âncoras” emocionais (pra soar íntimo e preciso)
+    const ancoras = {
+      radar: "como se sua mente virasse um radar 24h procurando problema",
+      peso: "uma sensação de peso no peito, no estômago ou nos ombros — mesmo quando ‘não aconteceu nada’",
+      culpa: "e ainda vem aquela culpa depois: ‘por que eu não consigo ser como antes?’",
+      curto: "você melhora um pouco… e depois o corpo puxa você de volta",
+      trava: "o corpo até deita, mas não ‘desarma’"
+    };
 
     if(score <= 4){
       plano = "Essencial";
-      titulo = "Você não está quebrada. Você só está cansada de aguentar tudo sozinha.";
-      espelho = `
-        Vou falar do jeito que eu falaria com uma amiga:
-        <strong>você funciona</strong>. Você dá conta. Você segura a onda.
+      headline = "Você não é fraca. Você só está cansada de viver no ‘quase dando conta’.";
+      carinho = `
+        Vou falar como eu falaria com alguém próximo:
         <br><br>
-        Mas tem um detalhe que quase ninguém vê:
-        você até descansa… só que não sente que <strong>recupera</strong>.
-        A mente fica ligada, como se tivesse sempre algo pra vigiar.
+        <strong>você funciona</strong>. Você entrega. Você resolve.
+        Só que por dentro, tem um pedaço de você que está sempre “em prontidão”.
+        ${ancoras.trava}.
       `;
-      oQueAcontece = `
-        Pelas suas respostas, seu eixo do estresse (HPA) está em <strong>alerta ${intensidade}</strong>.
+      corpo = `
+        Pelas suas respostas, seu eixo HPA está em <strong>${intensidadeTxt}</strong>.
         <br><br>
-        É como dirigir com o pé levemente no acelerador o dia inteiro.
-        Você vai indo… mas tudo pesa: sono mais frágil, irritação fácil, energia curta e aquela sensação de “eu não era assim”.
-      `;
-      porQueNinguemPega = `
-        Porque por fora você parece “bem”.
-        Você não está caída na cama o dia todo.
+        É como dirigir com o pé encostado no acelerador o dia inteiro.
+        Você chega no fim do dia e pensa: “eu não fiz tanta coisa assim… por que eu tô exausta?”
         <br><br>
-        Só que por dentro o seu corpo não desarma.
-        E quando o corpo não desarma, a mente vira radar: pensa demais, prevê problema, não relaxa.
+        Aí vem o sono leve, a mente ligada, a irritação fora do seu normal, e ${ancoras.culpa}.
       `;
-      porQueEssePlano = `
-        O <strong>Essencial</strong> é pra reorganizar isso com direção, sem confusão.
-        Você recebe a estrutura completa por ${tempo}, com começo, meio e execução simples.
+      invisivel = `
+        O que pega é que isso fica “invisível” pra quem olha de fora.
+        Por fora você parece ok.
+        Por dentro, ${ancoras.radar}.
         <br><br>
-        É o passo certo quando você ainda está “funcionando”, mas já percebeu que está no limite.
+        E quando o corpo vive assim, ele começa a tratar a vida como ameaça.
+        Não é drama. É fisiologia.
       `;
-      convite = `
-        Se você quer clareza e um caminho firme: <strong>agende a avaliação</strong>.
-        Em 20 minutos eu confirmo o padrão, ajusto o rumo e te digo o que faz sentido no seu caso — sem enrolar.
+      sentidoPlano = `
+        O <strong>Essencial</strong> é pra você reorganizar esse eixo em <strong>3 semanas</strong>, com uma estrutura clara:
+        começo, meio e direção.
+        <br><br>
+        É o plano certo quando você ainda está de pé — mas não quer esperar isso virar colapso.
       `;
-      tomMsg = "Quero começar pelo Essencial e reorganizar meu eixo com clareza.";
+      proximoPasso = `
+        Se você quer sair desse “modo alerta” sem se perder:
+        <strong>agende a avaliação</strong>.
+        Em 20 minutos eu confirmo o padrão e te digo com honestidade o que faz sentido no seu caso.
+      `;
+      tomMsg = "Quero começar pelo Essencial e reorganizar meu eixo com direção.";
     } else if(score <= 9){
       plano = "Acompanhado";
-      titulo = "Você não é fraca. Você só está cansada de recomeçar toda semana.";
-      espelho = `
-        Você tenta. Você começa. Você até melhora.
+      headline = "Seu corpo não está fraco. Ele só cansou de lutar sozinho.";
+      carinho = `
+        Sabe quando você tenta, promete pra você mesma, começa bem…
+        e aí ${ancoras.curto}?
         <br><br>
-        Aí vem uma noite ruim, um estresse, uma cobrança…
-        e parece que o corpo puxa você de volta pro mesmo lugar.
-        <br><br>
-        Isso não é falta de vontade. É um sistema interno que ainda está em alerta.
+        Isso não é falta de vontade.
+        É um sistema interno que não está estabilizado.
       `;
-      oQueAcontece = `
-        Seu HPA está em <strong>alerta ${intensidade}</strong> com oscilação.
+      corpo = `
+        Pelo seu teste, seu HPA está em <strong>${intensidadeTxt}</strong>.
         <br><br>
         Você entende as coisas na cabeça, mas o corpo não sustenta o sinal.
-        E quando o corpo não sustenta, a constância vira uma guerra.
-      `;
-      porQueNinguemPega = `
-        Muita gente tenta resolver só com “mente”.
-        Só que quando o corpo está em alerta, ele não negocia com frase bonita.
+        E quando o corpo não sustenta, a constância vira briga diária.
         <br><br>
-        Sem correção de rota, o sistema volta pro padrão antigo e você se culpa — sem merecer.
+        Resultado: sono quebrado, energia instável, ansiedade aparecendo do nada, ${ancoras.peso}.
       `;
-      porQueEssePlano = `
-        O <strong>Acompanhado</strong> existe pra evitar recaídas silenciosas.
+      invisivel = `
+        E aí acontece a pior parte: você começa a se culpar.
+        Só que o problema não é caráter, nem “fraqueza”.
         <br><br>
-        Com 3 contatos por semana, você não fica sozinha exatamente no ponto onde normalmente desistiria.
-        Isso cria consistência real por ${tempo}.
+        O corpo em alerta não negocia com motivação.
+        Ele precisa de <strong>regulação repetida</strong> até voltar pro lugar.
       `;
-      convite = `
-        Se você quer parar de viver em ciclo e começar um processo sustentado:
-        <strong>agende a avaliação</strong>. Eu vou te dizer com clareza onde o eixo está travando e como destravar por etapas.
+      sentidoPlano = `
+        O <strong>Acompanhado</strong> existe exatamente pra isso: você não ficar sozinha no ponto onde normalmente desistiria.
+        <br><br>
+        Com <strong>3 contatos por semana</strong> durante <strong>3 semanas</strong>, a gente corrige rota rápido,
+        fecha brechas e cria estabilidade real.
       `;
-      tomMsg = "Quero o Acompanhado para ter constância e sair do ciclo de recomeçar.";
+      proximoPasso = `
+        Se você quer parar de recomeçar e finalmente sustentar:
+        <strong>agende a avaliação</strong>.
+        Eu vou te mostrar onde o eixo está travando e como destravar por etapas, sem papo complicado.
+      `;
+      tomMsg = "Quero o Acompanhado pra ter constância e sair do ciclo de recomeçar.";
     } else {
       plano = "Intensivo";
-      titulo = "Seu corpo está em modo sobrevivência. E isso cansa até a alma.";
-      espelho = `
-        Isso aqui não é “cansaço comum”.
-        É quando você acorda já pesada, já tensa,
-        e a mente já começa correndo antes do dia começar.
+      headline = "Isso não é só cansaço. É sobrevivência. E sobrevivência drena a alma.";
+      carinho = `
+        Vou ser direto com carinho:
+        quando chega nesse nível, você não descansa de verdade.
+        Você “apaga”, mas não recupera.
         <br><br>
-        E o pior: você tenta explicar… e as pessoas acham que é exagero.
+        E tem dias que o corpo parece que acorda “assustado”,
+        mesmo sem nenhum motivo claro.
       `;
-      oQueAcontece = `
-        Seu HPA está em <strong>alerta ${intensidade}</strong>.
+      corpo = `
+        Pelo seu teste, seu HPA está em <strong>${intensidadeTxt}</strong>.
         <br><br>
-        Imagine um alarme que toca por ameaças invisíveis:
+        É como um alarme sensível demais tocando por ameaças invisíveis:
         pensamento repetitivo, antecipação, trauma, cobrança, sobrecarga.
-        O corpo produz urgência mesmo quando não há urgência real.
-      `;
-      porQueNinguemPega = `
-        Tem gente que trata só o sintoma: uma parte da mente ou uma parte do sono.
         <br><br>
-        Mas quando o corpo vive em alerta, ele precisa primeiro de uma coisa:
-        <strong>segurança fisiológica</strong>.
-        Sem isso, qualquer melhora vira curta e frágil.
+        A mente tenta controlar tudo porque o corpo não se sente seguro.
+        E aí vem a tensão, a irritação, o medo do futuro… e ${ancoras.culpa}.
       `;
-      porQueEssePlano = `
-        O <strong>Intensivo</strong> é presença diária (seg–sex) por ${tempo}.
+      invisivel = `
+        Muita gente tenta “resolver ansiedade” só por pensamento ou só por sono.
+        Mas quando o corpo está nesse estado, ele precisa primeiro de uma coisa:
+        <strong>segurança fisiológica</strong>.
+        <br><br>
+        Sem isso, qualquer melhora vira frágil e curta.
+      `;
+      sentidoPlano = `
+        O <strong>Intensivo</strong> é presença diária (seg–sex) por <strong>3 semanas</strong>.
         <br><br>
         Não é pra criar dependência.
-        É pra criar estabilidade justamente no período em que o corpo mais tenta voltar ao padrão antigo.
-        Esse nível de presença reduz desistência e acelera reorganização.
+        É pra estabilizar o sistema no período crítico, reduzir desistência e acelerar a reorganização.
       `;
-      convite = `
-        Se isso te descreveu de verdade: <strong>não adie</strong>.
-        Agende a avaliação. Você merece parar de viver como se todo dia fosse uma guerra.
+      proximoPasso = `
+        Se esse texto te acertou, não é coincidência.
+        <strong>Agende a avaliação</strong>.
+        A gente coloca ordem no caos com método, e você volta a sentir chão.
       `;
       tomMsg = "Quero o Intensivo porque sinto que meu corpo está em sobrevivência.";
     }
 
+    // Mensagem pronta pro WhatsApp (curta + emocional + objetiva)
     const waText =
 `Olá, Soares. Fiz o teste do HPA RESET®.
 
 Meu score foi ${score}/14 e indicou: ${plano}.
 
-O resultado descreveu exatamente o que eu estou vivendo.
+O resultado me descreveu muito. Eu estou vivendo isso de verdade.
 Quero agendar a avaliação inicial (20 min) para confirmar e começar com direção.
 
 ${tomMsg}`;
 
+    // Render resultado (bem “vendável”, sem parecer vendedor)
     const box = document.getElementById("resultBox");
     box.style.display = "block";
     box.innerHTML = `
-      <div style="font-weight:900;font-size:1.02rem;letter-spacing:-.02em;margin-bottom:10px;">
-        Indicação: <strong>${plano}</strong>
+      <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-bottom:10px;">
+        <div style="font-weight:900;letter-spacing:-.02em;">
+          Indicação: <strong>${plano}</strong>
+        </div>
+        <div style="color:#64748b;font-weight:800;">
+          (score: ${score}/14)
+        </div>
       </div>
 
-      <div style="font-weight:900;font-size:1.22rem;letter-spacing:-.03em;margin-bottom:10px;">
-        ${titulo}
+      <div style="font-weight:900;font-size:1.26rem;letter-spacing:-.03em;margin-bottom:10px;">
+        ${headline}
       </div>
 
       <div style="color:#334155">
-        ${espelho}
+        ${carinho}
       </div>
 
       <div style="margin-top:12px;color:#334155">
-        <strong>O que está acontecendo com você (sem papo complicado):</strong><br>
-        ${oQueAcontece}
+        <strong>O que está acontecendo com você (sem enrolar):</strong><br>
+        ${corpo}
       </div>
 
       <div style="margin-top:12px;color:#475569">
-        <strong>Por que parece que ninguém entende (e você começa a duvidar de si):</strong><br>
-        ${porQueNinguemPega}
+        <strong>Por que parece que ninguém entende:</strong><br>
+        ${invisivel}
       </div>
 
       <div style="margin-top:12px;color:#0f172a">
         <strong>Por que esse plano faz sentido agora:</strong><br>
-        ${porQueEssePlano}
+        ${sentidoPlano}
       </div>
 
       <div style="margin-top:12px;color:#0b1220">
-        <strong>Próximo passo (simples e direto):</strong><br>
-        ${convite}
+        <strong>Próximo passo (simples):</strong><br>
+        ${proximoPasso}
       </div>
 
       <div style="margin-top:16px;">
